--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,1 +1,19 @@
-fdsdfsdfdsfs
+<html>
+<head>
+
+</head>
+<body>
+<form method="POST" enctype="multipart/form-data" action="/">
+    <table>
+        <tr>
+            <td>File to upload:</td>
+            <td><input type="file" name="file"/></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td><input type="submit" value="Upload"/></td>
+        </tr>
+    </table>
+</form>
+</body>
+</html>
