--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,7 +3,7 @@
 
 </head>
 <body>
-<form method="POST" enctype="multipart/form-data" action="/">
+<form method="POST" enctype="multipart/form-data" action="/upload">
     <table>
         <tr>
             <td>File to upload:</td>
